# sol-pay

./: Anchor.toml  README.md
programs/sol-pay/: Cargo.toml
programs/sol-pay/src/: lib.rs
programs/sol-pay/src/instructions/: mod.rs  setup.rs  setup_lamport_receiver.rs  transfer.rs
programs/sol-pay/src/state/: mod.rs  receiver.rs  sender.rs
tests/: sol-pay.ts
